--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ section header {
 }
 
 section header img {
-    height: 35vh;
-    width: 17vw;
+    height: 300px;
+    width: 300px;
     border-radius: 12px;
 }
 
@@ -59,3 +59,9 @@ section div span a {
     background: rgb(45, 0, 97);
 }
 
+
+@media screen and (max-width:512px) {
+    #container{
+       
+    }
+}
