--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ section div span a {
 
 
 @media screen and (max-width:512px) {
-    #container{
-       
+    section header img{
+        width: 300px;
+        height: 300px;
     }
 }
